# claude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: chief-analyst.md  code-reviewer.md  congress-analyst.md  design-reviewer.md  drawdown-monitor.md  exec-cio.md  exec-coo.md  fundamentals-analyst.md  geopolitical-analyst.md  intel-chief.md  intel-congress.md  intel-geopolitical.md  intel-news.md  intel-social.md  macro-analyst.md  market-analyst.md  news-analyst.md  ops-code-reviewer.md  ops-design-reviewer.md  ops-devops.md  ops-security-reviewer.md  ops-token-optimizer.md  research-macro.md  research-quant.md  research-sec.md  research-statistics.md  research-strategy-analyst.md  research-strategy-researcher.md  risk-manager.md  risk-portfolio.md  sec-analyst.md  security-reviewer.md  signal-screener.md  social-analyst.md  statistics-analyst.md  strategy-analyst.md  strategy-researcher.md  swing-screener.md  token-optimizer.md  trading-drawdown-monitor.md  (+2 more)
.claude/references/: cli-commands.md
.github/workflows/: ci.yml
docs/: index.html  org-chart.md
docs/architecture/: README.md  core-architecture.md  data-architecture.md  enterprise-architecture.md  software-architecture.md
docs/reports/: 2026-02-11.html  2026-02-12.html  2026-02-13.html  2026-02-14.html  2026-02-15.html  about-2026-02-13.html  about-2026-02-14.html  about-2026-02-15.html  company-2026-02-12.html  company-2026-02-13.html  company-2026-02-14.html  financials-2026-02-13.html  financials-2026-02-14.html  financials-2026-02-15.html  forecasts-2026-02-12.html  forecasts-2026-02-13.html  forecasts-2026-02-14.html  research-2026-02-14.html  research-2026-02-15.html  roadmap-2026-02-14.html  roadmap-2026-02-15.html  sprint-board-2026-02-14.html  sprint-board-2026-02-15.html  strategies-2026-02-13.html  strategies-2026-02-15.html  (+7 more)
scripts/: compile_constituents.py  scheduled-run.ps1  setup-scheduled-tasks.ps1
tests/: test_integrity.py  test_main.py  test_research.py
(+181 files in other folders)
